--- a/styles.css
+++ b/styles.css
@@ -6,20 +6,23 @@ li i{
 }
 #news .carousel-inner .carousel-item {
     max-width: 100%;
-    max-height: 278px;
+    max-height: 375px;
 }
 .carousel-item img {
     max-width: 100%;
-    max-height: 278px;
-    min-height: 278px;
+    max-height: 375px;
+    min-height: 375px;
     object-fit: cover;
 }
 
 
-.container .col-sm-12 .card {
-    width: 60%;
-    max-height: 6em;
-    padding: 0.5em;
+#categories .row .card {
+    margin-right: 1em;
+    max-height: 7em;
+    max-width: 10em;
+}
+#categories .row .card img {
+    margin-top: 0.25em;
 }
 
 .card-img-top{
@@ -68,7 +71,6 @@ li a, li p {
       background-color: gray;
     }
 
-    /*Pruebas*/
     #crdsmall1,#crdsmall2,#crdsmall3,#crdsmall4,#crdLarge {
         height: calc(100% - 1rem);
     }
