--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,13 @@ li i{
     max-width: 100%;
     max-height: 375px;
 }
+.boxcontrol {
+      border-radius: 100%;
+      padding: 1em;
+      background-color: gray;
+    }
+
+
 .carousel-item img {
     max-width: 100%;
     max-height: 375px;
