--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,7 @@ li a, li p {
         text-decoration: none;
         color: #000;
     }
+    #imagenDoge{
+        width: 70%;
+        height: 100%;
+    }
