--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,15 @@
 body {
     background-color: #f2f2f2;
 }
+#logo {
+    background-color: transparent;
+}
+#cart, #user {
+    color: #000;
+}
+#cart:hover, #user:hover {
+    color: darkorange;
+}
 li i{
     font-size: 2em; 
 }
