--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ li a, li p {
         text-decoration: none;
         color: #000;
     }
-    #imagenDoge{
+    #imagenAcordion{
         width: 70%;
         height: 100%;
     }
@@ -118,5 +118,13 @@ li a, li p {
       /*Pruebas*/
 #listProducts .card {
     width: 300px;
-    height: 300px;
+    background-color: #f7f7f7;
+    border: none;
+}
+#listProducts .card img {
+    object-fit: fill;
+}
+
+.plataforms {
+    font-size: small;
 }
